--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A high-quality Discord Bot where you mine and hunt in an enhanced mining simulator, directly on Discord.",
   "main": "router.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node ./bin/www",
     "build": "express --view=pug minekingdom"
   },
   "repository": {
@@ -23,8 +23,13 @@
   },
   "homepage": "https://github.com/DamienVesper/MineKingdom#readme",
   "dependencies": {
+    "cookie-parser": "^1.4.4",
+    "debug": "^4.1.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-generator": "^4.16.1",
+    "http-errors": "^1.7.3",
+    "morgan": "^1.9.1",
     "pug": "^2.0.4"
   }
 }
